// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fade should match snapshot 1`] = `
<div>
  <div
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <span>
      Fade Text
    </span>
  </div>
</div>
`;

exports[`Fade should match snapshot 2`] = `
<div>
  <div
    style="opacity: 0; visibility: hidden;"
  >
    <span>
      Fade Text
    </span>
  </div>
</div>
`;
